finalizando curso de forms

--- a/gatitobook-front/src/app/home/home.component.html
+++ b/gatitobook-front/src/app/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 my-2">
+      <img
+        src="https://ogimg.infoglobo.com.br/in/24649523-8a0-224/FT1086A/88249115.jpg"
+        alt="Imagem de um gato par aas boas vindas"
+        class="img-fluid d-none d-sm-block"
+      />
+    </div>
+
+    <div class="col-md-6">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
