--- a/gatitobook-front/src/app/components/rodape/rodape.component.html
+++ b/gatitobook-front/src/app/components/rodape/rodape.component.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-6">
-          <a routerLink="['']">
+          <a [routerLink]="['']">
             <i class="fa fa-home fa-2x"></i>
           </a>
         </div>
